# Project

./: .gitignore  CMakeLists.txt  README.md
analysis/: result of the analysis.xlsx
analysis/data/input/: typeChar.txt  typeDouble.txt  typeFloat.txt  typeInt.txt  typeString.txt  typeUnsignedInt.txt  typeUnsignedLong.txt
analysis/data/output/: out_bucket_doubleList_int.txt  out_quick_binaryTree_char.txt  out_quick_stack_unsignedInt.txt  out_shell_binaryTree_double.txt  out_shell_doubleList_unsignedLong.txt  out_shell_stack_string.txt
analysis/data/results/: A_bucket.csv  A_quick.csv  A_shell.csv  B_quick.csv  C_quick_array.csv  alpha_quick.csv  alpha_shell.csv  omega_quick.csv
include/algorytmsSorting/: BucketSort.h  QuickSort.h  ShellSort.h
include/benchmark/: BenchmarkCsvWriter.h  BenchmarkRunner.h  BenchmarkStats.h  RandomArrayGenerator.h
include/checking/: SortingCheck.h
include/file/: FileHandler.h
include/singleFile/: SingleFileRunner.h
include/structures/: Array.h  BinaryTree.h  DoubleList.h  SingleList.h  Stack.h
lib/parameters/: Parameters.h
src/: main.cpp
src/algorytmsSorting/: BucketSort.cpp  QuickSort.cpp  ShellSort.cpp
src/benchmark/: BenchmarkCsvWriter.cpp  BenchmarkRunner.cpp  BenchmarkStats.cpp  RandomArrayGenerator.cpp
src/checking/: SortingCheck.cpp
src/file/: FileHandler.cpp
src/singleFile/: SingleFileRunner.cpp
src/structures/: Array.cpp  DoubleList.cpp  SingleList.cpp  Singlelist.cpp
